--- a/import/java-openws/branches/wstrustIntegration/pom.xml
+++ b/import/java-openws/branches/wstrustIntegration/pom.xml
@@ -3,56 +3,36 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.opensaml</groupId>
     <artifactId>openws</artifactId>
-    <version>1.0.0</version>
+    <version>wstrust</version>
     <packaging>jar</packaging>
 
     <name>OpenWS</name>
     <description>
-        The OpenWS library provides a growing set of tools to work with web services at a low level. These tools include
-        classes for creating and reading SOAP messages, transport-independent clients for connecting to web services,
-        and various transports for use with those clients.
+        The OpenWS library provides a growing set of tools to work with
+        web services at a low level. These tools include classes for
+        creating and reading SOAP messages, transport-independent
+        clients for connecting to web services, and various transports
+        for use with those clients.
     </description>
-    <url>https://opensaml.org/</url>
-    <inceptionYear>2006</inceptionYear>
 
-    <build>
-        <finalName>openws</finalName>
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
-                    <debug>true</debug>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <configuration>
-                    <descriptors>
-                        <descriptor>src/main/assembly/bin.xml</descriptor>
-                        <descriptor>src/main/assembly/src.xml</descriptor>
-                    </descriptors>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>make-assembly</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>attached</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+    <repositories>
+        <repository>
+            <id>shibboleth.internet2.edu</id>
+            <name>Internet2</name>
+            <layout>default</layout>
+            <url>http://shibboleth.internet2.edu/downloads/maven2</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
     <dependencies>
         <!-- Compile dependencies -->
         <dependency>
             <groupId>org.opensaml</groupId>
             <artifactId>xmltooling</artifactId>
-            <version>1.0.0</version>
+            <version>1.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -118,6 +98,38 @@
             </exclusions>
         </dependency>
 
+        <!-- Runtime dependencies -->
+        <dependency>
+            <groupId>org.apache.xerces</groupId>
+            <artifactId>xml-apis</artifactId>
+            <version>2.9.1</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.xerces</groupId>
+            <artifactId>xercesImpl</artifactId>
+            <version>2.9.1</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.xerces</groupId>
+            <artifactId>resolver</artifactId>
+            <version>2.9.1</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.xerces</groupId>
+            <artifactId>serializer</artifactId>
+            <version>2.9.1</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.xalan</groupId>
+            <artifactId>xalan</artifactId>
+            <version>2.7.1</version>
+            <scope>runtime</scope>
+        </dependency>
+
         <!-- Test dependencies -->
         <dependency>
             <groupId>junit</groupId>
@@ -139,17 +151,47 @@
         </dependency>
     </dependencies>
 
-    <repositories>
-        <repository>
-            <id>shibboleth.internet2.edu</id>
-            <name>Internet2</name>
-            <layout>default</layout>
-            <url>http://shibboleth.internet2.edu/downloads/maven2</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.5</source>
+                    <target>1.5</target>
+                    <debug>true</debug>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <descriptors>
+                        <descriptor>
+                            src/main/assembly/bin.xml
+                        </descriptor>
+                        <descriptor>
+                            src/main/assembly/src.xml
+                        </descriptor>
+                    </descriptors>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>attached</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-ant-plugin</artifactId>
+                <version>2.1-SNAPSHOT</version>
+            </plugin>
+        </plugins>
+    </build>
 
     <reporting>
         <plugins>
@@ -158,14 +200,39 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
                     <links>
-                        <link>http://java.sun.com/j2se/1.5.0/docs/api/</link>
+                        <link>
+                            http://java.sun.com/j2se/1.5.0/docs/api/
+                        </link>
                     </links>
-                    <linksource>true</linksource>
+                    <quiet>true</quiet>
                     <author>false</author>
                     <version>true</version>
-                    <doctitle>${project.name} ${project.version} Java API.</doctitle>
-                    <windowtitle>${project.name} ${project.version} Java API.</windowtitle>
+                    <doctitle>
+                        ${project.name} ${project.version} Java API.
+                    </doctitle>
+                    <windowtitle>
+                        ${project.name} ${project.version} Java API.
+                    </windowtitle>
                     <overview>src/main/java/overview.html</overview>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jxr-plugin</artifactId>
+                <configuration>
+                    <outputDirectory>
+                        ${project.reporting.outputDirectory}/xref
+                    </outputDirectory>
+                    <doctitle>
+                        ${project.name} ${project.version} Code
+                        Cross-Reference
+                    </doctitle>
+                    <windowtitle>
+                        ${project.name} ${project.version} Java API.
+                    </windowtitle>
+                    <javadocDir>
+                        ${project.reporting.outputDirectory}/apidocs
+                    </javadocDir>
                 </configuration>
             </plugin>
             <plugin>
@@ -173,10 +240,123 @@
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <configuration>
                     <configLocation>checkstyle.xml</configLocation>
+                    <outputDirectory>
+                        ${project.reporting.outputDirectory}/style
+                    </outputDirectory>
+                    <enableRSS>false</enableRSS>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <configuration>
+                    <outputDirectory>
+                        ${project.reporting.outputDirectory}/unitTest
+                    </outputDirectory>
+                    <xrefLocation>
+                        ${project.reporting.outputDirectory}/xref
+                    </xrefLocation>
                 </configuration>
             </plugin>
         </plugins>
     </reporting>
+
+    <profiles>
+        <profile>
+            <id>release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>release-javadoc</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>javadoc</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-jxr-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>release-jxr</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>jxr</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-checkstyle-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>release-checkstyle</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>checkstyle</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>
+                            maven-surefire-report-plugin
+                        </artifactId>
+                        <executions>
+                            <execution>
+                                <id>release-unitTest</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>report-only</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-assembly-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>make-assembly</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>attached</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
+    <!-- Project Metadata -->
+    <url>https://opensaml.org/</url>
+
+    <inceptionYear>2006</inceptionYear>
 
     <licenses>
         <license>
@@ -191,12 +371,53 @@
         <url>http://www.internet2.edu/</url>
     </organization>
 
+    <issueManagement>
+        <system>JIRA</system>
+        <url>http://bugs.internet2.edu/</url>
+    </issueManagement>
+
+    <mailingLists>
+        <mailingList>
+            <name>OpenSAML Users</name>
+            <subscribe>
+                https://spaces.internet2.edu/display/OpenSAML/MailingList
+            </subscribe>
+            <unsubscribe>
+                https://spaces.internet2.edu/display/OpenSAML/MailingList
+            </unsubscribe>
+            <post>mace-opensaml-users@internet2.edu</post>
+            <archive>
+                https://mail.internet2.edu/wws/arc/mace-opensaml-users
+            </archive>
+            <otherArchives>
+                <otherArchive>
+                    http://groups.google.com/group/opensaml-users
+                </otherArchive>
+            </otherArchives>
+        </mailingList>
+    </mailingLists>
+
+    <scm>
+        <connection>
+            scm:svn:https://svn.middleware.georgetown.edu/java-xmltooling/
+        </connection>
+        <developerConnection>
+            scm:svn:https://svn.middleware.georgetown.edu/java-xmltooling/
+        </developerConnection>
+        <tag>HEAD</tag>
+        <url>
+            http://svn.middleware.georgetown.edu/view/?root=java-xmltooling
+        </url>
+    </scm>
+
     <developers>
         <developer>
             <id>cantor</id>
             <name>Scott Cantor</name>
             <organization>The Ohio State University</organization>
-            <organizationUrl>http://www.ohio-state.edu/</organizationUrl>
+            <organizationUrl>
+                http://www.ohio-state.edu/
+            </organizationUrl>
             <roles>
                 <role>developer</role>
             </roles>
@@ -227,7 +448,9 @@
             <id>putmanb</id>
             <name>Brent Putman</name>
             <organization>Georgetown University</organization>
-            <organizationUrl>http://www.georgetown.edu/</organizationUrl>
+            <organizationUrl>
+                http://www.georgetown.edu/
+            </organizationUrl>
             <roles>
                 <role>developer</role>
             </roles>
@@ -244,53 +467,5 @@
             <timezone>0</timezone>
         </developer>
     </developers>
-
-    <issueManagement>
-        <system>JIRA</system>
-        <url>http://bugs.internet2.edu/</url>
-    </issueManagement>
-
-    <mailingLists>
-        <mailingList>
-            <name>OpenSAML Users</name>
-            <subscribe>https://spaces.internet2.edu/display/OpenSAML/MailingList</subscribe>
-            <unsubscribe>https://spaces.internet2.edu/display/OpenSAML/MailingList</unsubscribe>
-            <post>mace-opensaml-users@internet2.edu</post>
-            <archive>https://mail.internet2.edu/wws/arc/mace-opensaml-users</archive>
-            <otherArchives>
-                <otherArchive>http://groups.google.com/group/opensaml-users</otherArchive>
-            </otherArchives>
-        </mailingList>
-    </mailingLists>
-
-    <scm>
-        <connection>scm:svn:https://svn.middleware.georgetown.edu/java-openws/</connection>
-        <developerConnection>scm:svn:https://svn.middleware.georgetown.edu/java-openws/</developerConnection>
-        <tag>HEAD</tag>
-        <url>http://svn.middleware.georgetown.edu/view/?root=java-openws</url>
-    </scm>
-    
-    <profiles>
-        <profile>
-            <id>release</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-gpg-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>sign-artifacts</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>sign</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 
 </project>
